subnet.tf
resource "aws_subnet" "main" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  availability_zone ="us-west-2a"
  tags = {
    Name = "Main"
  }
}
